# that_would_be_telling

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  bacon.toml  docker-compose.yml
crud_derive/: Cargo.toml
crud_derive/src/: lib.rs
src/: main.rs
src/db/: surreal.rs
src/handlers/: environment.rs  mod.rs  permission.rs  project.rs  role.rs  user.rs  variable.rs
src/middlewares/: auth.rs
src/models/: claims.rs  environment.rs  mod.rs  permission.rs  project.rs  response.rs  role.rs  user.rs  variable.rs
src/repos/: base.rs  environment.rs  mod.rs  permission.rs  project.rs  role.rs  user.rs  variable.rs
src/routes/: environment.rs  mod.rs  permission.rs  project.rs  role.rs  user.rs  variable.rs
src/utils/: args.rs  env.rs  mod.rs  time.rs
ui/: .cta.json  .gitignore  package-lock.json  package.json
ui/src/: styles.css  vite-env.d.ts
ui/src/api/: index.ts  permission.api.ts  user.api.ts
ui/src/components/: app-sidebar.tsx  logged-in-user.tsx  login-form.tsx
ui/src/models/: permission.model.ts  record-id.model.ts  response.model.ts  user.model.ts
ui/src/routes/: __root.tsx  login.tsx
