[package]
name = "rsbac"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.11.8"
serde = { version = "1.0.209", features = ["derive"] }
surrealdb = "2.0.4"
thiserror = "2.0.12"
jsonwebtoken = "9"
chrono = "0.4.41"
actix-service = "2"
futures-util = "0.3"
crud_derive = { path = "crud_derive" }
